[gd_scene load_steps=67 format=2]

[ext_resource path="res://Scripts/NPC.gd" type="Script" id=1]
[ext_resource path="res://Assets/NPCs/pedreiro-sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Atention.png" type="Texture" id=3]
[ext_resource path="res://Assets/NPCs/punk-sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/NPCs/teen-sheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/NPCs/paramedic-sheet.png" type="Texture" id=6]
[ext_resource path="res://Assets/NPCs/dona-sheet.png" type="Texture" id=7]
[ext_resource path="res://Assets/NPCs/atriz-sheet.png" type="Texture" id=8]
[ext_resource path="res://Assets/NPCs/businessman-sheet.png" type="Texture" id=9]
[ext_resource path="res://Assets/NPCs/boy-sheet.png" type="Texture" id=10]
[ext_resource path="res://Assets/NPCs/egirl-sheet.png" type="Texture" id=11]
[ext_resource path="res://Shaders/OutlineShader.gdshader" type="Shader" id=12]
[ext_resource path="res://Assets/NPCs/artist-sheet.png" type="Texture" id=13]
[ext_resource path="res://Assets/NPCs/teacher-sheet.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.7168, 12.0093 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 12 )
shader_param/rainbow = false
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_scale = 0.5
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 13 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 13 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 13 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 11 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 11 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 14 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 14 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 14 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Adolescente",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Atriz",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Punk",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Empresario",
"speed": 10.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Artista",
"speed": 10.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Menino",
"speed": 10.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Paramedico",
"speed": 10.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "Egirl",
"speed": 10.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "Dona",
"speed": 10.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Pedreiro",
"speed": 10.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "Professora",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=48]
radius = 215.383

[sub_resource type="ShaderMaterial" id=49]
shader = ExtResource( 12 )
shader_param/rainbow = false
shader_param/line_color = Color( 0.909804, 0.552941, 0.196078, 1 )
shader_param/line_scale = 0.5
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="GDScript" id=50]
script/source = "extends Sprite

var global_position_y = -16

func _process(delta):
	position.y = global_position_y + 2*sin(2*PI*delta)
	pass
"

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 14.4756, 10 )

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 13.7265, 6.7677 )

[node name="NPC" type="KinematicBody2D" groups=[
"minimap_objects",
]]
z_index = 1
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CollisionShape2D"]
material = SubResource( 2 )
frames = SubResource( 47 )
animation = "Paramedico"
frame = 3
playing = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.793701 )
shape = SubResource( 48 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RunerTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Atention" type="Sprite" parent="."]
material = SubResource( 49 )
position = Vector2( 0, -16 )
texture = ExtResource( 3 )
script = SubResource( 50 )

[node name="Head" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2( -0.980991, -9.63978 )
shape = SubResource( 51 )

[node name="Legs" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Legs"]
position = Vector2( -0.749146, 7.11696 )
shape = SubResource( 52 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="RunerTimer" to="." method="_on_RunerTimer_timeout"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_exited" from="Head" to="." method="_on_Head_body_exited"]
[connection signal="body_entered" from="Legs" to="." method="_on_Legs_body_entered"]
[connection signal="body_exited" from="Legs" to="." method="_on_Legs_body_exited"]
